# music_apps

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.cursor/rules/: github-mcp.mdc  pdf-remarkable-tablet.mdc  python-uv-deps.mdc
apps/: __init__.py
apps/daily_planner/: __init__.py  main.py  pdf_export.py
apps/metronome/: __init__.py  main.py
apps/practice_sheets/: __init__.py  generator.py  main.py  pdf_export.py
apps/wave_sequencer/: __init__.py  main.py  synthesizer.py
infra/: template.yaml
lib/: __init__.py  config.py
scripts/: README.md
